# xsmade

./: .clang-format  .clangd  .curlcc.cache  .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists-bak.txt  CMakeLists.txt  Chromium_dev_Configuration_Manual.html  LICENSE  README.md  XSiumio_Configuration_Manual.html  build.ninja  cmake_install.cmake  compile_commands.json  finger.dyn  fixed_raf_code.cc  linux.clang-format
base/: CMakeLists.txt
base/base/: CMakeLists.txt  base.cc  base.h  base.pc  base.pc.cmakein  cmake_install.cmake  export.cc  system.cc  task.h
base/curlcc/: CMakeLists.txt  curlcc.cc  curlcc.h
base/logcc/: CMakeLists.txt  log.cc  logcc.pc  logcc.pc.cmakein
base/ssl/: CMakeLists.txt  ssl.cc  ssl.pc  ssl.pc.cmakein
base/stl/: CMakeLists.txt  args.cc  cmake_install.cmake  cmdline.cc  common.cc  conv.cc  directory.cc  file.cc  path.cc  stl.cc  stl.pc  stl.pc.cmakein  string.cc  time.cc
base/sys/: CMakeLists.txt  cmake_install.cmake  sys.cc  sys.h  sys.pc  sys.pc.cmakein
base/sys/apple/: common.cc  memory.cc  proc.cc
base/sys/common/: impl.cc
base/sys/linux/: common.cc  memory.cc  net.cc  proc.cc
base/sys/win/: common.cc  net.cc  proc.cc  win.h
base/system/apple/: net.cc
base/uvcc/: CMakeLists.txt  system.cc  uvcc.cc  uvcc.pc  uvcc.pc.cmakein
base/uvpp/: CMakeLists.txt  buffer.h  callback.h  client.cpp  client.h  config.cpp  config.h  export.h  protocol.cpp  protocol.h  server.cpp  server.h  service.cc  service.h  session.cpp  session.h  stream.cpp  uvpp.cc  uvpp.h
base/wxui/: CMakeLists.txt  app.cc  app.h  config.cc  config.h  deps.cc  deps.h  export.h  frame.h  frame_base.cc  frame_base.h  global.cc  global.h  recording_args.cc  recording_args.h  shape_frame.cc  shape_frame.h  theme.cc  toolbar_frame.cc  toolbar_frame.h  wxui.cc  wxui.h
base/wxui/frame/: background.cc  frame_bkg.cc  frame_bkg.h  frame_component.cc  frame_component.h  frame_tool.cc  frame_tool.h  frame_tool_screenshot.cc  frame_tool_screenshot.h  frame_work.cc  frame_work.h  frame_work_bak.cc  frame_work_bak.h  frame_work_image.cc  frame_work_image.h  guide.h  recording.cc  recording.h  recording_toolbar.cc  recording_workspace.cc  screenshot.cc  screenshot.h  screenshot_toolbar.cc  screenshot_workspace.cc  toolbar.cc  toolbar.h  workspace.cc  workspace.h
base/zipcc/: CMakeLists.txt  cmake_install.cmake  config.h  minizip.cc  zipcc.cc  zipcc.pc  zipcc.pc.cmakein
components/cceng/: CMakeLists.txt  cceng.cc  cceng.h  export.h
components/curlcc/: CMakeLists.txt  config.cc  config.h  configure.hpp  curlcc.cc  curlcc.h  export.h  request.cc  request.h
components/curlcc/crawler/: web.cc  web.h
projects/: CMakeLists.txt  cmake_install.cmake
projects/.__backup__/brw_configure/: CMakeLists.txt
projects/.__backup__/ffx/: CMakeLists.txt  ffx.cc  ffx.h
projects/.__backup__/ffxctrl/: app.cc  config.h  deps.h  frame.cc  frame.h
projects/.__backup__/ffxui/: config.h  main.cc  server.h
projects/.__backup__/services/: CMakeLists.txt  config.h  wxapp.cc  wxapp.h  wxframe.h
projects/MediaStreamRTC/MediaStreamClient/: CMakeLists.txt  MediaStreamClient.cc  MediaStreamClient.h  main.cc
projects/MediaStreamRTC/MediaStreamComm/: CMakeLists.txt  MediaStreamComm.h
projects/MediaStreamRTC/MediaStreamServer/: CMakeLists.txt  MediaStreamServer.cc  MediaStreamServer.h  main.cc
projects/browser/: configure.hpp  configure_old.hpp  flowChart.mmd  fps.json  ibrw.h  ibrwcfg.h  ibrwsvr copy.h  ibrwsvr.h  icomponent.h  isettings.hpp  protocol.hpp
projects/browser/brwcfg/: CMakeLists.txt  args.cc  args.h  brwcfg.cc  brwcfg.h  buffer.cc  buffer.h  chromium.cc  chromium.h  client.cc  client.h  config.cc  config.h  configure.hpp  dom2json.js  export.h  extension.cc  extension.h  test.js  vmem.cc  vmem.h  wxdeps.cc  wxdeps.h
projects/browser/brwext/: CMakeLists.txt  brwext.cc
projects/browser/brwsvr/: CMakeLists.txt  brwmnr.cc  brwmnr.h  brwobj.cc  brwobj.h  cmake_install.cmake  config.cc  config.h  ffcodec.cc  ffcodec.h  ibrwsvr.cc  server.cc  server.h  server_process.cc
projects/browser/brwtest/: CMakeLists.txt  brwtest.cc  brwtest.h  cmake_install.cmake
projects/browser/server/: CMakeLists.txt  export.h  server.cc  server.h
projects/browser/startup/: CMakeLists.txt  config.cc  config.h  (+4 more)
projects/brwserver/: main.cc
projects/ffxctrl/: CMakeLists.txt  app.h  export.h  ffxctrl.cc  ffxctrl.h
projects/ffxui/: CMakeLists.txt  wx.rc  wxapp.cc  wxframe.h
projects/installer/: CMakeLists.txt  wxui.cc
projects/launch/: CMakeLists.txt  launch.cc  launch.h  main.cc
projects/nswxskin/: CMakeLists.txt  app.cc  app.h  deps.cc  deps.h  global.cc  global.h  installer.cc  installer.h  test.cc  wxui.cc  wxui.h
projects/perform/: CMakeLists.txt  browser.cc  browser.h  cmdline.cc  cmdline.h  components.cc  components.h  config.cc  config.h  configure.cc  configure.h  define.h  ffxargs.cc  local.h  main.cc  perform.cc  perform.h  require_administrator.manifest  server.cc  server.h  uac.rc
projects/services/: CMakeLists.txt  config.h  main.cc  server.cc  server.h  wxframe.cc  wxframe.h
projects/utils/: adscore.html  adscore.py
tests/: CMakeLists.txt  cmake_install.cmake
tests/test_base/: CMakeLists.txt  main.cc
tests/test_brwcfg/: CMakeLists.txt  main.cc
tests/test_brwsvr/: CMakeLists.txt  cmake_install.cmake  main.cc
tests/test_cceng/: CMakeLists.txt  main.cc
tests/test_cmake_env/: CMakeLists.txt  main.cc
tests/test_curlcc/: CMakeLists.txt  main.cc
tests/test_engine/: CMakeLists.txt  main.cc
tests/test_ffx/: CMakeLists.txt  main.cc
tests/test_httpserver/: CMakeLists.txt  main.cc
tests/test_hzcl/: CMakeLists.txt  main.cc
tests/test_icucc/: CMakeLists.txt  main.cc
tests/test_main/: CMakeLists.txt  main.cc
tests/test_memade/: CMakeLists.txt  main.cc  sdk.hpp  win.hpp
tests/test_nsis/: CMakeLists.txt  main.cc
tests/test_poll/: CMakeLists.txt  main.cc
tests/test_settings/: CMakeLists.txt  main.cc
tests/test_uvpp_client/: CMakeLists.txt  main.cc
tests/test_uvpp_server/: CMakeLists.txt  main.cc
tests/test_wxui/: CMakeLists.txt  main.cc
(+476 files in other folders)
