#############################################################################
# Name:        build/cmake/projects/CMakeLists.txt
# Purpose:     Build projects components
# Author:      Martell
# Created:     2024-11-04
# Copyright:   (c) 2024 skstu development team
# Licence:     skstu licence
#############################################################################

add_subdirectory(brw_configure)
add_subdirectory(services)
