# ##############################################################################
# Name:        build/cmake/projects/CMakeLists.txt Purpose:     Build projects
# components Author:      Martell Created:     2024-11-04 Copyright:   (c) 2024
# skstu development team Licence:     skstu licence
# ##############################################################################
# add_subdirectory(engine/cpp) add_subdirectory(perform)
# add_subdirectory(nswxskin) add_subdirectory(launch) add_subdirectory(ffxctrl)
# add_subdirectory(ffxui) add_subdirectory(ffx) add_subdirectory(services)
# add_subdirectory(MediaStreamRTC/MediaStreamComm)
# add_subdirectory(MediaStreamRTC/MediaStreamClient)
# add_subdirectory(MediaStreamRTC/MediaStreamServer)
# add_subdirectory(engine/jsonnet) add_subdirectory(installer)
add_subdirectory(perform)
add_subdirectory(browser/brwcfg)
add_subdirectory(browser/brwext)
