# ##############################################################################
# Name:        build/cmake/projects/CMakeLists.txt Purpose:     Build projects
# components Author:      Martell Created:     2024-11-04 Copyright:   (c) 2024
# skstu development team Licence:     skstu licence
# ##############################################################################

# add_subdirectory(test_nsis) add_subdirectory(test_icucc)
# add_subdirectory(test_curlcc) add_subdirectory(test_wxui)
# add_subdirectory(test_engine) add_subdirectory(test_ffx)
# add_subdirectory(test_uvpp_server) add_subdirectory(test_uvpp_client)
# add_subdirectory(test_brwcfg) add_subdirectory(test_httpserver)
# add_subdirectory(test_brwsvr)

add_subdirectory(test_main)
add_subdirectory(test_brwsvr)
add_subdirectory(test_brwcfg)

